[package]
name = "collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc", "tracing/release_max_level_warn"]

# TODO: mmap, memfd_create() ver

# XXX: without bytes, it completely fails??
# bytes: use `bytes` crate for collecting instead of `std::vec`

# Use jemalloc instead of system malloc.
# Seems to reduce overall memory usage at the cost of a very small speed drop.
jemalloc = ["jemallocator"]

# Remove all tracing points
no-logging = ["tracing/max_level_off"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip=true

[profile.symbols]
inherits="release"
#incremental=true
strip=false

[dependencies]
bytes = { version = "1.1.0", optional = true }
color-eyre = { version = "0.6.1", features = ["capture-spantrace"] }
jemallocator = { version = "0.3.2", optional = true }
libc = "0.2.122"
tracing = { version = "0.1.33", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["tracing", "env-filter"] }
